--- a/.github/workflows/build_loopcaregiver.yml
+++ b/.github/workflows/build_loopcaregiver.yml
@@ -2,6 +2,13 @@ name: 4. Build LoopCaregiver
 run-name: Build LoopCaregiver (${{ github.ref_name }})
 on:
   workflow_dispatch:
+  
+  ## Remove the "#" sign from the beginning of the line below to get automated builds on push (code changes in your repository)
+  #push:
+
+  ## Remove the "#" sign from the beginning of the two lines below to get automated builds every two months
+  schedule:
+    - cron: '0 17 16 */1 *' # Runs at 17:00 UTC on the 1st every month
 
 jobs:
   validate:
